# logcrawler

./: .dockerignore  .gitignore  .gitlab-ci.yml  01_input_game_data.py  02_combine_logs.py  03_representation_exporter.py  04_calculate_logstatus.py  04_calculate_logstatus_cognition.py  04_calculate_logstatus_cognition_images.py  04_calculate_num_images.py  05_calculate_logstatus_motion.py  05_calculate_num_images.py  05_extract_images.py  06_calculate_logstatus.py  06_calculate_num_frames.py  06_extract_images.py  06_fast.py  06_input_cognition_representation_data.py  07_calculate_logstatus.py  07_calculate_num_frames.py  07_input_cognition_data_rust.py  07_input_cognition_frames.py  07_input_frames.py  08_input_cognition_representation_data.py  08_input_motion_data_rust.py  08_input_motion_frames.py  09_input_motion_representation_data.py  09_input_videos.py  10_input_behavior_frames.py  11_calculate_image_stats.py  11_input_behavior_symbols.py  12_input_images.py  13_calculate_image_stats.py  14_calculate_closest_frames.py  15_add_git_hash.py  1_input_event_data.py  Cargo.toml  Dockerfile  README.md  Tiltfile  (+12 more)
backup/: main.py
check_images/: main.py
combine_images/: main.py
combine_logs/: main.py
db_ingester/: behavior_ingester.py  create_view.py  event_list.py  main.py
docs/: SQL-Commands.md  UserManagement.md
image_extractor/: main.py
labelstudio_importer/: main.py
minio_importer/: main.py  new.py
patch_exporter/: PatchExecutor.py  cppyy_tools.py  helper.py  (+3 more)
rust/reader/: Cargo.toml  TODO.md  build.rs  cargo.txt
rust/reader/src/: frame.rs  main.rs
(+56 files in other folders)
