[package]
name = "log-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "log_crawler"
crate-type = ["cdylib"]

[dependencies]
prost = "0.11"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
kdam = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pyobject = "0.3"

[build-dependencies]
prost-build = "0.13.5"
