[package]
name = "reader"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.11"
prost-types = "0.11"
prost-reflect = "0.11"  # This provides DynamicMessage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-build = "0.13.5"

[build-dependencies]
prost-build = "0.13.5"
